tests/NormalTests/paczka1/fuzzy1/63711649.err
Error in line 15: S330 A159 7,0
Error in line 20: VLM S36 72,5
Error in line 30: LYDEoACWoo A27 136,4
